--- a/index.html
+++ b/index.html
@@ -503,6 +503,13 @@
       </div>
     </section>
     <!-- // Best place section end  -->
+    <!--  footer section start  -->
+    <footer>
+      <h4>
+        footer section
+      </h4>
+    </footer>
+    <!-- // footer section end  -->
 
 
 
