--- a/index.html
+++ b/index.html
@@ -505,9 +505,7 @@
     <!-- // Best place section end  -->
     <!--  footer section start  -->
     <footer>
-      <h4>
-        footer section
-      </h4>
+      <button herf="https://zabiremu.com">click me</button>
     </footer>
     <!-- // footer section end  -->
 
