--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     <!--  footer section start  -->
     <footer>
       <h4>
-        footer section
+        footer section strat
       </h4>
     </footer>
     <!-- // footer section end  -->
